# nertboard

./: .gitignore  Cargo.toml  LICENSE  database.bd
crates/nertboard-client/: Cargo.toml
crates/nertboard-client/src/: lib.rs
crates/nertboard-core/: Cargo.toml
crates/nertboard-core/src/: lib.rs
crates/nertboard-server/: Cargo.toml
crates/nertboard-server/src/: main.rs  prelude.rs  setup.rs
crates/nertboard-server/src/api_key/: mod.rs
crates/nertboard-server/src/database/: init.rs  mod.rs
crates/nertboard-server/src/server/: mod.rs  tests.rs
