[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
nertboard-core = { path = "crates/nertboard-core" }

axum = "0.7.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
http-body-util = "0.1.0"
uuid = { version = "1.6.1", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

reqwest = { version = "0.11.23", features = ["json"] }

sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "postgres", "sqlite"] }
dotenv = "0.15.0"

clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
color-eyre = "0.6.2"
